cf_analysis_results/checkerframework_results/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8.txt
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Op.java:45: error: (return) $$ 2 $$ @MustCallUnknown String $$ @MustCall String $$ ( 1127, 1169 ) $$ incompatible types in return.
            return "{" + this.first + ":" + this.second + "}";
                                                        ^
  type of expression: @MustCallUnknown String
  method return type: @MustCall String
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Console.java:227: error: (required.method.not.called) $$ 4 $$ method close $$ writer $$ java.io.Writer $$ possible exceptional exit due to writer.flush() with exception type java.io.IOException $$ ( 9362, 9389 ) $$ @MustCall method close may not have been invoked on writer or any of its aliases.
            writer = new StringWriter();
                   ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to writer.flush() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Console.java:233: error: (required.method.not.called) $$ 4 $$ method close $$ writer $$ java.io.Writer $$ possible exceptional exit due to writer.flush() with exception type java.io.IOException $$ ( 9574, 9609 ) $$ @MustCall method close may not have been invoked on writer or any of its aliases.
            writer = new FileWriter(outputFile);
                   ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to writer.flush() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Console.java:275: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2924 $$ java.io.FileReader $$ regular method exit $$ ( 11338, 11362 ) $$ @MustCall method close may not have been invoked on temp-var-2924 or any of its aliases.
                BufferedReader reader = new BufferedReader(new FileReader(dataFile));
                                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Console.java:524: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-3130 $$ java.io.FileReader $$ possible exceptional exit due to source.readLine() with exception type java.io.IOException $$ ( 23827, 23848 ) $$ @MustCall method close may not have been invoked on temp-var-3130 or any of its aliases.
                BufferedReader source = new BufferedReader(new FileReader(input));
                                                           ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to source.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url90b6689baa_adsonrocha_PD321_tgz-pJ8-MyFuzzyLiteClassJ8/src/com/fuzzylite/Console.java:551: error: (required.method.not.called) $$ 4 $$ method close $$ target $$ java.io.FileWriter $$ possible exceptional exit due to target.write("#include <fl/Headers.h>\n\nint main(int argc, char** argv){\n" + exporter.toString(engine) + "\n}\n") with exception type java.io.IOException $$ ( 25014, 25061 ) $$ @MustCall method close may not have been invoked on target or any of its aliases.
                FileWriter target = new FileWriter(outputFile);
                           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to target.write("#include <fl/Headers.h>\n\nint main(int argc, char** argv){\n" + exporter.toString(engine) + "\n}\n") with exception type java.io.IOException
6 errors
